--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -73,83 +73,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0                                            Afghanistan\n",
-       "1                                                Albania\n",
-       "2                                                Algeria\n",
-       "3                                         American Samoa\n",
-       "4                                                Andorra\n",
-       "5                                                 Angola\n",
-       "6                                               Anguilla\n",
-       "7                                    Antigua and Barbuda\n",
-       "8                                              Argentina\n",
-       "9                                                Armenia\n",
-       "10                                                 Aruba\n",
-       "11                                             Australia\n",
-       "12                                               Austria\n",
-       "13                                            Azerbaijan\n",
-       "14                                               Bahamas\n",
-       "15                                               Bahrain\n",
-       "16                                            Bangladesh\n",
-       "17                                              Barbados\n",
-       "18                                               Belarus\n",
-       "19                                               Belgium\n",
-       "20                                                Belize\n",
-       "21                                                 Benin\n",
-       "22                                               Bermuda\n",
-       "23                                                Bhutan\n",
-       "24                                               Bolivia\n",
-       "25                      Bonaire, Sint Eustatius and Saba\n",
-       "26                                Bosnia and Herzegovina\n",
-       "27                                              Botswana\n",
-       "28                                                Brazil\n",
-       "29                                British Virgin Islands\n",
-       "                             ...                        \n",
-       "197                                          Switzerland\n",
-       "198                                 Syrian Arab Republic\n",
-       "199                                           Tajikistan\n",
-       "200                                             Thailand\n",
-       "201            The former Yugoslav Republic of Macedonia\n",
-       "202                                          Timor-Leste\n",
-       "203                                                 Togo\n",
-       "204                                                Tonga\n",
-       "205                                  Trinidad and Tobago\n",
-       "206                                              Tunisia\n",
-       "207                                               Turkey\n",
-       "208                                         Turkmenistan\n",
-       "209                             Turks and Caicos Islands\n",
-       "210                                               Tuvalu\n",
-       "211                                               Uganda\n",
-       "212                                              Ukraine\n",
-       "213                                 United Arab Emirates\n",
-       "214    United Kingdom of Great Britain and Northern I...\n",
-       "215                          United Republic of Tanzania\n",
-       "216                             United States of America\n",
-       "217                         United States Virgin Islands\n",
-       "218                                              Uruguay\n",
-       "219                                           Uzbekistan\n",
-       "220                                              Vanuatu\n",
-       "221                                            Venezuela\n",
-       "222                                             Viet Nam\n",
-       "223                            Wallis and Futuna Islands\n",
-       "224                                                Yemen\n",
-       "225                                               Zambia\n",
-       "226                                             Zimbabwe\n",
-       "Name: Country, Length: 227, dtype: object"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'Iran'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc (pandas/_libs/index.c:5085)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item (pandas/_libs/hashtable.c:13892)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: an integer is required",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-0e616e38d773>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0manswer_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mget_GDP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m \u001b[0manswer_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-8-0e616e38d773>\u001b[0m in \u001b[0;36manswer_one\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mGDP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Country'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Iran'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0manswer_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mget_GDP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0manswer_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-0e616e38d773>\u001b[0m in \u001b[0;36mget_GDP\u001b[0;34m()\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0mGDP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Country'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mold_name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mnew_name\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mGDP\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Country'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Iran'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0manswer_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mget_GDP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    599\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    600\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 601\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    602\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    603\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   2426\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2427\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 2428\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   2429\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2430\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'boolean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value (pandas/_libs/index.c:4363)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_value (pandas/_libs/index.c:4046)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc (pandas/_libs/index.c:5169)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Iran'"
+     ]
     }
    ],
    "source": [
-    "def answer_one():\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_Energy():\n",
     "    #load the energy data from the file Energy Indicators.xls\n",
     "    energy = pd.read_excel('Energy Indicators.xls',skiprows = 17, skipfooter = 38, na_values = \"...\")\n",
     "    \n",
@@ -168,12 +122,29 @@
     "    energy.replace('United Kingdom of Great Britain and Northern Ireland','United Kingdom', inplace = True)\n",
     "    energy.replace('China, Hong Kong Special Administrative Region','Hong Kong', inplace = True)\n",
     "    \n",
-    "    #getting rid of numerical values in country names\n",
+    "    #getting rid of numerical values and parantheses in country names\n",
     "    energy['Country'].replace('\\d*','', regex=True, inplace=True)\n",
     "    energy['Country'].replace('\\s*\\(.*?\\)\\s*', '', regex=True, inplace=True)\n",
     "    \n",
-    "    return energy['Country']\n",
+    "    return energy\n",
     "\n",
+    "def get_GDP():\n",
+    "    #loading gdp data\n",
+    "    GDP =  pd.read_csv('world_bank.csv',skiprows = 4)\n",
+    "    \n",
+    "    #change column name \"Country Name\" to \"Country\"\n",
+    "    GDP.rename(columns={'Country Name': 'Country'}, inplace = True)\n",
+    "    \n",
+    "    #replacing each country in dicts's keys with the corresponding dicts value\n",
+    "    dicts = {\"Korea, Rep.\": \"South Korea\", \n",
+    "             \"Iran, Islamic Rep.\": \"Iran\",\n",
+    "             \"Hong Kong SAR, China\": \"Hong Kong\"}\n",
+    "\n",
+    "    for old_name, new_name in dicts.items():\n",
+    "        GDP['Country'].replace({old_name : new_name}, inplace = True)\n",
+    "\n",
+    "def answer_one():\n",
+    "    return get_GDP()\n",
     "answer_one()"
    ]
   },
@@ -189,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
