attempt dos - wrong - need to fix

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -73,16 +73,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "0                                            Afghanistan\n",
+       "1                                                Albania\n",
+       "2                                                Algeria\n",
+       "3                                         American Samoa\n",
+       "4                                                Andorra\n",
+       "5                                                 Angola\n",
+       "6                                               Anguilla\n",
+       "7                                    Antigua and Barbuda\n",
+       "8                                              Argentina\n",
+       "9                                                Armenia\n",
+       "10                                                 Aruba\n",
+       "11                                             Australia\n",
+       "12                                               Austria\n",
+       "13                                            Azerbaijan\n",
+       "14                                               Bahamas\n",
+       "15                                               Bahrain\n",
+       "16                                            Bangladesh\n",
+       "17                                              Barbados\n",
+       "18                                               Belarus\n",
+       "19                                               Belgium\n",
+       "20                                                Belize\n",
+       "21                                                 Benin\n",
+       "22                                               Bermuda\n",
+       "23                                                Bhutan\n",
+       "24                                               Bolivia\n",
+       "25                      Bonaire, Sint Eustatius and Saba\n",
+       "26                                Bosnia and Herzegovina\n",
+       "27                                              Botswana\n",
+       "28                                                Brazil\n",
+       "29                                British Virgin Islands\n",
+       "                             ...                        \n",
+       "197                                          Switzerland\n",
+       "198                                 Syrian Arab Republic\n",
+       "199                                           Tajikistan\n",
+       "200                                             Thailand\n",
+       "201            The former Yugoslav Republic of Macedonia\n",
+       "202                                          Timor-Leste\n",
+       "203                                                 Togo\n",
+       "204                                                Tonga\n",
+       "205                                  Trinidad and Tobago\n",
+       "206                                              Tunisia\n",
+       "207                                               Turkey\n",
+       "208                                         Turkmenistan\n",
+       "209                             Turks and Caicos Islands\n",
+       "210                                               Tuvalu\n",
+       "211                                               Uganda\n",
+       "212                                              Ukraine\n",
+       "213                                 United Arab Emirates\n",
+       "214    United Kingdom of Great Britain and Northern I...\n",
+       "215                          United Republic of Tanzania\n",
+       "216                             United States of America\n",
+       "217                         United States Virgin Islands\n",
+       "218                                              Uruguay\n",
+       "219                                           Uzbekistan\n",
+       "220                                              Vanuatu\n",
+       "221                                            Venezuela\n",
+       "222                                             Viet Nam\n",
+       "223                            Wallis and Futuna Islands\n",
+       "224                                                Yemen\n",
+       "225                                               Zambia\n",
+       "226                                             Zimbabwe\n",
+       "Name: Country, Length: 227, dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,19 +204,14 @@
     "    \n",
     "    #oin the three datasets: GDP, Energy, and ScimEn into a new dataset (using the intersection of country names). \n",
     "    #Use only the last 10 years (2006-2015) of GDP data and \n",
-    "    #only the top 15 countries by Scimagojr 'Rank' (Rank 1 through 15). \n",
-    "    #GDP[list('Country','2006','2007','2008','2009','2010','2011','2012','2013','2014','2015')]\n",
+    "    #only the top 15 countries by Scimagojr 'Rank' (Rank 1 through 15).     \n",
+    "    return pd.merge(pd.merge(energy, \n",
+    "                            ScimEn[:15], \n",
+    "                            how='inner',left_on='Country',right_on='Country'),\n",
+    "                    GDP[['Country','2006','2007','2008','2009','2010','2011','2012','2013','2014','2015']],\n",
+    "                    how='inner',left_on='Country',right_on='Country').set_index('Country')\n",
     "    \n",
-    "#     return pd.merge(pd.merge(energy, \n",
-    "#                             ScimEn[:15], \n",
-    "#                             how='inner',left_on='Country',right_on='Country'),\n",
-    "#                     GDP[['Country','2006','2007','2008','2009','2010','2011','2012','2013','2014','2015']],\n",
-    "#                     how='inner',left_on='Country',right_on='Country')\n",
-    "    ScimEn = ScimEn[:15]\n",
-    "    df = pd.merge(ScimEn,energy,how='inner',left_on='Country',right_on='Country')\n",
-    "    new_df = pd.merge(df,GDP,how='inner',left_on='Country',right_on='Country')\n",
-    "    new_df = new_df.set_index('Country')\n",
-    "    return #\"United States\" in energy['Country']\n",
+    "#    return energy['Country']\n",
     "answer_one()"
    ]
   },
