--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -760,16 +760,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Iran                  4.441558e+11\n",
+       "South Korea           1.106715e+12\n",
+       "Australia             1.164043e+12\n",
+       "Spain                 1.418078e+12\n",
+       "Russian Federation    1.565459e+12\n",
+       "Canada                1.660647e+12\n",
+       "India                 1.769297e+12\n",
+       "Italy                 2.120175e+12\n",
+       "Brazil                2.189794e+12\n",
+       "United Kingdom        2.487907e+12\n",
+       "France                2.681725e+12\n",
+       "Germany               3.493025e+12\n",
+       "Japan                 5.542208e+12\n",
+       "China                 6.348609e+12\n",
+       "United States         1.536434e+13\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "def answer_three():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    return Top15[['2006','2007','2008','2009','2010','2011','2012','2013','2014','2015']].mean(axis=1).sort_values()\n",
+    "answer_three()"
    ]
   },
   {
@@ -791,6 +819,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "def answer_four():\n",
     "    Top15 = answer_one()\n",
     "    return \"ANSWER\""
