--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -812,17 +812,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "228139911279.3601"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "def answer_four():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    sixth = Top15.where((Top15['Rank'] == 6)).dropna()\n",
+    "    return (sixth['2015'] - sixth['2006']).item()\n",
+    "answer_four()"
    ]
   },
   {
