--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "United States       1.615662e+13  1.654857e+13  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 172,
    "metadata": {
     "scrolled": true
    },
@@ -823,7 +823,7 @@
        "228139911279.3601"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,15 +849,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "157.6"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_five():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    return Top15['Energy Supply per Capita'].mean()\n",
+    "answer_five()"
    ]
   },
   {
@@ -872,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -880,6 +890,9 @@
    "source": [
     "def answer_six():\n",
     "    Top15 = answer_one()\n",
+    "    max_renewable = Top['% Renewable'].max()\n",
+    "    country = (Top15.where((Top15['% Renewable'] == Top['% Renewable'].max())).dropna()\n",
+    "    \n",
     "    return \"ANSWER\""
    ]
   },
