--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -882,18 +882,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Brazil', 69.648030000000006)"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_six():\n",
     "    Top15 = answer_one()\n",
-    "    max_renewable = Top['% Renewable'].max()\n",
-    "    country = (Top15.where((Top15['% Renewable'] == Top['% Renewable'].max())).dropna()\n",
-    "    \n",
-    "    return \"ANSWER\""
+    "    country_name = Top15.where((Top15['% Renewable'] == Top15['% Renewable'].max())).dropna().index.tolist()[0]\n",
+    "    return (country_name, Top15['% Renewable'].max())\n",
+    "answer_six()"
    ]
   },
   {
@@ -909,15 +917,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('China', 0.40804325417277881)"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_seven():\n",
     "    Top15 = answer_one()\n",
-    "    return \"ANSWER\""
+    "    Top15['Self-Citations to Total Citations'] = Top15['Self-citations']/(Top15['Citations'] + Top15['Self-citations'])\n",
+    "    return (Top15.where((Top15['Self-Citations to Total Citations'] == Top15['Self-Citations to Total Citations'].max())).dropna().index.tolist()[0], \n",
+    "            Top15['Self-Citations to Total Citations'].max())\n",
+    "answer_seven()"
    ]
   },
   {
