--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -917,16 +917,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('China', 0.40804325417277881)"
+       "('China', 0.68931261793894216)"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
    "source": [
     "def answer_seven():\n",
     "    Top15 = answer_one()\n",
-    "    Top15['Self-Citations to Total Citations'] = Top15['Self-citations']/(Top15['Citations'] + Top15['Self-citations'])\n",
+    "    Top15['Self-Citations to Total Citations'] = Top15['Self-citations']/Top15['Citations']\n",
     "    return (Top15.where((Top15['Self-Citations to Total Citations'] == Top15['Self-Citations to Total Citations'].max())).dropna().index.tolist()[0], \n",
     "            Top15['Self-Citations to Total Citations'].max())\n",
     "answer_seven()"
@@ -962,6 +962,7 @@
    "source": [
     "def answer_eight():\n",
     "    Top15 = answer_one()\n",
+    "    Top['estimated population'] = Top15['Energy']/Top15['Energy Supply per capita']\n",
     "    return \"ANSWER\""
    ]
   },
