--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -954,16 +954,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('United States', 317615384.61538464)"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_eight():\n",
     "    Top15 = answer_one()\n",
-    "    Top['estimated population'] = Top15['Energy']/Top15['Energy Supply per capita']\n",
-    "    return \"ANSWER\""
+    "    Top15['estimated population'] = Top15['Energy Supply']/Top15['Energy Supply per Capita']\n",
+    "    return (Top15['estimated population'].nlargest(3).index.tolist()[2], Top15['estimated population'].nlargest(3)[2])\n",
+    "\n",
+    "answer_eight()"
    ]
   },
   {
